# Assignment3-MedianArray

./: CMakeLists.txt  README.md
Deterministic/: Deterministic.cpp  Determinitstic.cpp  Determinitstic.h  detMain.cpp  tests
Randomised/: TestSim  randomMain.cpp  random_QuickSelect.cpp  random_QuickSelect.h  testSim  tests  trash.cpp
